--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "expo": "^28.0.0",
     "firebase": "^5.1.0",
+    "lodash": "^4.17.10",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
     "react-native-button": "^2.3.0",
+    "react-native-elements": "^0.19.1",
     "react-native-router-flux": "^4.0.0-beta.31",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
